@@ -1,12 +1,17 @@
 package foxiwhitee.FoxLib.recipes.crafts;
 
+import com.google.gson.JsonObject;
+import cpw.mods.fml.common.registry.GameRegistry;
 import foxiwhitee.FoxLib.recipes.IFoxRecipe;
 import foxiwhitee.FoxLib.recipes.IJsonRecipe;
+import foxiwhitee.FoxLib.recipes.RecipeUtils;
 import foxiwhitee.FoxLib.utils.helpers.OreDictUtil;
 import net.minecraft.item.ItemStack;
 import net.minecraftforge.oredict.OreDictionary;
+import net.minecraftforge.oredict.ShapelessOreRecipe;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -14,11 +19,7 @@ public class ShapelessCraft implements IJsonRecipe<Object, ItemStack> {
     private ItemStack[] outputs;
     private Object[] inputs;
 
-    public ShapelessCraft(ItemStack out, Object... inputs) {
-        this.inputs = inputs;
-        this.outputs = new ItemStack[]{out};
-
-    }
+    public ShapelessCraft() {}
 
     @Override
     public ItemStack[] getOutputs() {
@@ -32,7 +33,7 @@ public class ShapelessCraft implements IJsonRecipe<Object, ItemStack> {
 
     @Override
     public boolean matches(List<Object> inputs) {
-        List<Object> ins = new ArrayList<>(List.of(this.getInputs()));
+        List<Object> ins = new ArrayList<>(Arrays.asList(getInputs()));
         List<Object> inCopy = new ArrayList<>(inputs);
 
         for (Iterator<Object> it = inCopy.iterator(); it.hasNext(); ) {
@@ -80,5 +81,48 @@ public class ShapelessCraft implements IJsonRecipe<Object, ItemStack> {
     @Override
     public String getType() {
         return "workbenchShapeless";
+    }
+
+    @Override
+    public IJsonRecipe create(JsonObject data) {
+        try {
+            this.outputs = new ItemStack[] { RecipeUtils.getOutput(data) };
+            this.inputs = RecipeUtils.getInputs(data, hasOreDict());
+        } catch (RuntimeException e) {
+            if (e.getMessage().startsWith("Item not found:")) {
+                this.inputs = null;
+                this.outputs = null;
+            } else {
+                throw e;
+            }
+        }
+        return this;
+    }
+
+    @Override
+    public void register() {
+        if (this.outputs == null && this.inputs == null) {
+            return;
+        }
+        if (inputs == null || inputs.length == 0)
+            throw new IllegalArgumentException("Inputs cannot be empty for shapeless recipe");
+
+        java.util.List<Object> params = new java.util.ArrayList<>();
+
+        for (Object in : inputs) {
+            if (in == null) continue;
+            if (in instanceof String) {
+                params.add((String) in);
+            } else if (in instanceof ItemStack) {
+                params.add(((ItemStack) in).copy());
+            } else {
+                throw new IllegalArgumentException("Unsupported ingredient type: " + in.getClass());
+            }
+        }
+
+        if (params.isEmpty())
+            throw new IllegalArgumentException("Recipe must have at least one valid ingredient");
+
+        GameRegistry.addRecipe(new ShapelessOreRecipe(outputs[0].copy(), params.toArray()));
     }
 }
